[package]
name = "lore-seeker"
version = "0.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]

[lib]
name = "lore_seeker_desktop"
path = "src/lib.rs"

[[bin]]
name = "lore-seeker-windows"
path = "src/main.rs"
doc = false
test = false
bench = false

[[bin]]
name = "lore-seeker-release"
path = "src/bin/release.rs"
doc = false
test = false
bench = false

[dependencies]
cargo_metadata = "*"
itertools = "*"
native-windows-gui = "0.2.0"
open = "*"
reqwest = "*"
semver = "*"
serde = "1.0"
serde_derive = "1.0"
urlencoding = "*"
wrapped_enum = "*"
