[package]
name = "lore-seeker"
version = "0.2.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
name = "lore_seeker_desktop"
path = "src/lib.rs"

[[bin]]
name = "install-cockatrice"
path = "src/bin/install-cockatrice.rs"
test = false
bench = false

[[bin]]
name = "lore-seeker-desktop"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "lore-seeker-release"
path = "src/bin/release.rs"
test = false
bench = false

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
cargo_metadata = "*"
itertools = "*"
open = "*"
reqwest = "*"
semver = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "*"
urlencoding = "*"
wrapped_enum = "*"

[dependencies.azul]
git = "https://github.com/maps4print/azul"
